fix Cover button spacing and text update

--- a/src/app/containers/Cover.scss
+++ b/src/app/containers/Cover.scss
@@ -13,3 +13,8 @@
   position: relative;
   width: 100%;
 }
+
+
+.cover__btn {
+  padding: 15px 30px;
+}
